--- a/index.html
+++ b/index.html
@@ -4,22 +4,9 @@
     <meta charset="utf-8">
     <title>Phsr-tst</title>
     <script type="text/javascript" src="lib/phaser.min.js"></script>
-
+    <script type="text/javascript" src="src/main.js"></script>
   </head>
   <body>
     hi world
   </body>
 </html>
-<script type="text/javascript">
-var game = new Phaser.Game(800,600, Phaser.AUTO, '',{
-  preload: preload,
-  create:  create,
-  update: update
-});
-
-function preload(){}
-function create(){}
-function update(){}
-
-
-</script>
